docs: include `swagger` docs for health route
